@@ -55,15 +55,15 @@ public class FleetManager {
     public void pathUpdate(Fleet fleet){
         if(!fleet.getPath().isEmpty()){
             for(Boat boat : fleet.getArrayListFleet()){
-                if(boat.getPath().isEmpty()&&(fleet.getContinuePath()||!boat.getPosition().equals(fleet.getPath().getLast().getPoint()))){
-                    if(boat.getPosition().equals(fleet.getPath().getFirst().getPoint())){
+                if(boat.getPath().isEmpty()&&(fleet.getContinuePath()||!boat.getPosition().equals(fleet.getPath().get(fleet.getPath().size()-1).getPoint()))){
+                    if(boat.getPosition().equals(fleet.getPath().get(0).getPoint())){
                         ArrayList<GraphPoint> newPath = new ArrayList<>();
                         newPath.addAll(fleet.getPath());
                         boat.setPath(newPath);
                         boat.setContinuePath(fleet.getContinuePath());
                     }
                     else {
-                        boat.setPath(SearchInGraph.findPath(boat,fleet.getPath().getFirst()));
+                        boat.setPath(SearchInGraph.findPath(boat,fleet.getPath().get(0)));
                     }
                 }
             }
